--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorPrimary">#FFECAA</color>
     <color name="colorPrimary300">#CF8600</color>
     <color name="transparent_black">#80000000</color>
+    <color name="transparent_white">#80FFFFFF</color>
 </resources>
