--- a/app/src/main/res/layout/activity_food_detail.xml
+++ b/app/src/main/res/layout/activity_food_detail.xml
@@ -5,31 +5,126 @@
     android:id="@+id/main"
     tools:context=".views.activities.FoodDetailActivity">
 
+    <data>
+        <variable
+            name="FoodDetailViewModel"
+            type="com.example.myfoodorder.viewmodels.FoodDetailViewModel" />
+    </data>
+
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/textView2"
+        <RelativeLayout
+            android:layout_marginTop="10dp"
+            android:id="@+id/layout_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            android:translationZ="3dp"/>
+            android:layout_height="?actionBarSize"
+            android:background="#00000000">
+
+            <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="@{FoodDetailViewModel.getFood().name}"
+                android:fontFamily="@font/svn_gilroy_semi_bold"
+                android:textSize="20dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{String.valueOf(FoodDetailViewModel.getFood().price)}"
+                android:fontFamily="@font/svn_gilroy_semi_bold"
+                android:textSize="20sp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:paddingEnd="20dp">
+
+            </TextView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_marginLeft="10dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                app:cardBackgroundColor="@color/transparent_white"
+                android:onClick="@{() -> FoodDetailViewModel.onClickButtonBack()}"
+                app:cardCornerRadius="20dp"
+                app:cardElevation="0.1dp"
+                android:layout_centerVertical="true">
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_back_arrow"
+                    android:scaleX="0.4"
+                    android:scaleY="0.4"
+                    >
+                </ImageView>
+
+            </androidx.cardview.widget.CardView>
+        </RelativeLayout>
+
 
         <LinearLayout
+            android:layout_below="@id/layout_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-            <ImageView
-                android:id="@+id/restaurant_image"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/banana_lickety_split"
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                app:cardCornerRadius="30dp"
+                >
+                <ImageView
+                    android:id="@+id/food_detail_image"
+                    android:layout_width="300dp"
+                    android:layout_height="300dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/banana_lickety_split"
+                    app:food_image="@{FoodDetailViewModel.getFood().imageUrl}"
+                    />
+            </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Description"
+                android:fontFamily="@font/svn_gilroy_semi_bold"
+                android:textSize="20sp"
+                android:layout_marginTop="20dp"
+                android:paddingStart="40dp"
+                android:paddingEnd="40dp"
                 />
-
-
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@{FoodDetailViewModel.getFood().description}"
+                android:fontFamily="@font/svn_gilroy_regular"
+                android:textSize="15sp"
+                android:paddingStart="40dp"
+                android:paddingEnd="40dp"
+                />
         </LinearLayout>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_alignParentBottom="true"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/yellow_background"
+            android:fontFamily="@font/svn_gilroy_semi_bold"
+            android:text="Add to bag"
+            android:onClick="@{() -> FoodDetailViewModel.onAddToBagClick()}"
+            android:textAllCaps="false"
+            android:textSize="16sp" />
     </RelativeLayout>
 
 </layout>
