--- a/app/src/main/res/layout/activity_restaurant_detail.xml
+++ b/app/src/main/res/layout/activity_restaurant_detail.xml
@@ -14,12 +14,26 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            android:translationZ="3dp"/>
+        <androidx.cardview.widget.CardView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_margin="10dp"
+            app:cardBackgroundColor="@color/transparent_white"
+            android:onClick="@{() -> RestaurantDetailViewModel.onClickButtonBack()}"
+            app:cardCornerRadius="20dp"
+            app:cardElevation="0.1dp">
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_back_arrow"
+                android:scaleX="0.4"
+                android:scaleY="0.4"
+                >
+
+            </ImageView>
+
+        </androidx.cardview.widget.CardView>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -31,6 +45,7 @@
                 android:layout_height="200dp"
                 android:scaleType="centerCrop"
                 app:restaurant_banner_image="@{RestaurantDetailViewModel.getRestaurant().imageUrl}"
+                android:src="@drawable/banana_lickety_split"
                 />
 
 
@@ -91,9 +106,12 @@
             </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rcv_food_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:listitem="@layout/item_food_list">
+                tools:listitem="@layout/item_food_list"
+                app:list_food_data="@{RestaurantDetailViewModel.listFoods}"
+                >
 
 
             </androidx.recyclerview.widget.RecyclerView>
