--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,21 +17,22 @@
         android:paddingRight="15dp">
 
         <RelativeLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
             <EditText
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="60dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/custom_search_bar"
+                android:fontFamily="@font/svn_gilroy_regular"
                 android:hint="Search"
+                android:paddingStart="20dp"
                 android:imeOptions="actionSearch"
                 android:inputType="text"
-                android:padding="10dp"
-                android:textSize="18dp"
-                android:fontFamily="@font/svn_gilroy_regular"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:layout_marginTop="10dp"/>
+                android:textSize="18dp" />
 
         </RelativeLayout>
         <TextView
