--- a/app/src/main/res/layout/item_restaurant_list.xml
+++ b/app/src/main/res/layout/item_restaurant_list.xml
@@ -57,7 +57,8 @@
                         android:layout_gravity="bottom|right"
                         android:layout_marginEnd="-90dp"
                         android:layout_marginBottom="-50dp"
-                        app:srcCompat="@drawable/custom_circle_bg" />
+                        app:srcCompat="@drawable/custom_circle_bg"
+                        />
 
                 </androidx.cardview.widget.CardView>
 
@@ -67,11 +68,12 @@
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:background="@drawable/custom_circle_black_button"
-                    android:src="@drawable/outline_add_location_alt_48"
+                    android:src="@drawable/ic_up_right_arrow_34px"
                     android:translationZ="5dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    tools:ignore="SpeakableTextPresentCheck" />
+                    tools:ignore="SpeakableTextPresentCheck"
+                    android:onClick="@{(view) -> RestaurantModel.goToRestaurantDetail(view)}"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
