--- a/app/src/main/res/layout/layout_bottom_sheet_bag.xml
+++ b/app/src/main/res/layout/layout_bottom_sheet_bag.xml
@@ -2,7 +2,15 @@
 <layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data>
+        <variable
+            name="DialogAddToBagViewModel"
+            type="com.example.myfoodorder.viewmodels.DialogAddToBagViewModel" />
+    </data>
+
     <androidx.cardview.widget.CardView
+        app:cardCornerRadius="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -17,18 +25,20 @@
                 android:orientation="horizontal">
 
                 <androidx.cardview.widget.CardView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-
+                    android:id="@+id/layout_image"
+                    android:layout_width="130dp"
+                    android:layout_height="130dp"
+                    app:cardCornerRadius="6dp"
+                    android:layout_margin="15dp"
+                    >
                     <ImageView
-                        android:id="@+id/imageView"
-                        android:layout_width="138dp"
-                        android:layout_height="119dp"
-                        android:scaleX="0.7"
-                        android:scaleY="0.7"
-                        android:layout_weight="1"
-                        app:srcCompat="@drawable/banana_lickety_split" />
-
+                        android:id="@+id/imageView2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:food_image="@{DialogAddToBagViewModel.getFood().imageUrl}"
+                        app:srcCompat="@drawable/banana_lickety_split"
+                        android:scaleType="centerCrop"
+                        />
                 </androidx.cardview.widget.CardView>
 
                 <LinearLayout
@@ -43,7 +53,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:text="BBQ Chicken"
+                        android:text="@{DialogAddToBagViewModel.getFood().name}"
                         android:fontFamily="@font/svn_gilroy_semi_bold"
                         android:textSize="20sp" />
 
@@ -52,7 +62,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:text="190.000d"
+                        android:text="@{String.valueOf(DialogAddToBagViewModel.getFood().price)}"
                         android:textColor="@color/colorPrimary300"
                         android:fontFamily="@font/svn_gilroy_semi_bold"
                         android:textSize="18sp" />
@@ -102,8 +112,10 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                tools:ignore="ExtraText">
+                android:layout_marginBottom="20dp"
+                tools:ignore="ExtraText"
+                android:paddingEnd="10dp"
+                android:paddingStart="10dp">
 ">
 
                 <androidx.appcompat.widget.AppCompatButton
@@ -113,7 +125,9 @@
                     android:layout_weight="1"
                     android:text="Cancel"
                     android:background="@drawable/yellow_background"
-                    android:layout_marginEnd="5dp"/>
+                    android:onClick="@{() -> DialogAddToBagViewModel.onCancelClick()}"
+                    android:layout_marginEnd="5dp"
+                    />
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/button"
@@ -122,6 +136,7 @@
                     android:layout_weight="1"
                     android:text="Add to bag"
                     android:background="@drawable/yellow_background"
+                    android:onClick="@{() -> DialogAddToBagViewModel.onAddToBagClick()}"
                     android:layout_marginStart="5dp"/>
             </LinearLayout>
 
