--- a/app/src/main/res/layout/fragment_bag.xml
+++ b/app/src/main/res/layout/fragment_bag.xml
@@ -1,14 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     tools:context=".views.fragments.BagFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <data>
+        <variable
+            name="BagViewModel"
+            type="com.example.myfoodorder.viewmodels.BagViewModel" />
+    </data>
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        >
 
-</FrameLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@+id/layout_bottom">
+        </androidx.recyclerview.widget.RecyclerView>
+
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/layout_bottom"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true">
+             <LinearLayout
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:orientation="vertical"
+                 android:padding="15dp"
+                 >
+                 <LinearLayout
+                     android:layout_width="match_parent"
+                     android:layout_height="match_parent"
+                     android:layout_marginBottom="10dp"
+                     >
+                     <TextView
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:text="Subtotal"
+                         android:textSize="16sp"
+                         android:layout_weight="1"
+                         android:fontFamily="@font/svn_gilroy_semi_bold"/>
+                     <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="1000"
+                            android:layout_weight="1"
+                            android:textSize="16sp"
+                            android:gravity="right"
+                            android:fontFamily="@font/svn_gilroy_semi_bold"/>
+                 </LinearLayout>
+
+                 <LinearLayout
+                     android:layout_width="match_parent"
+                     android:layout_height="match_parent"
+                     android:layout_marginBottom="10dp"
+                     >
+                     <TextView
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:text="Delivery"
+                         android:textSize="16sp"
+                         android:layout_weight="1"
+                         android:fontFamily="@font/svn_gilroy_semi_bold"/>
+                     <TextView
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:text="1000"
+                         android:layout_weight="1"
+                         android:textSize="16sp"
+                         android:gravity="right"
+                         android:fontFamily="@font/svn_gilroy_semi_bold"/>
+                 </LinearLayout>
+
+                 <LinearLayout
+                     android:layout_width="match_parent"
+                     android:layout_height="match_parent"
+                     android:layout_marginBottom="15dp"
+                     >
+                     <TextView
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:text="Total"
+                         android:textSize="16sp"
+                         android:layout_weight="1"
+                         android:fontFamily="@font/svn_gilroy_bold"/>
+                     <TextView
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:text="1000"
+                         android:layout_weight="1"
+                         android:textSize="16sp"
+                         android:gravity="right"
+                         android:fontFamily="@font/svn_gilroy_semi_bold"/>
+                 </LinearLayout>
+
+                 <androidx.appcompat.widget.AppCompatButton
+                     android:layout_width="match_parent"
+                     android:layout_height="60dp"
+                     android:background="@drawable/yellow_background"
+                     android:fontFamily="@font/svn_gilroy_semi_bold"
+                     android:text="Check out"
+                     android:textAllCaps="false"
+                     android:textSize="16sp" />
+
+             </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+
+    </RelativeLayout>
+
+</layout>
