--- a/app/src/main/res/layout/fragment_orders.xml
+++ b/app/src/main/res/layout/fragment_orders.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     tools:context=".views.fragments.OrdersFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <data>
+        <variable
+            name="OrdersViewModel"
+            type="com.example.myfoodorder.viewmodels.OrdersViewModel" />
+    </data>
+
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        tools:listitem="@layout/item_order_list"
+        android:padding="8dp"
+        >
+    </androidx.recyclerview.widget.RecyclerView>
 
-</FrameLayout>
+</layout>
